added method rewrite test for java 17 sealed classes